<resources>
    <string name="app_name">Go Vpn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="feedback">Feedback</string>
    <string name="text">Please share Your thoughts suggestions below</string>
    <string name="all_servers">All Servers</string>
    <string name="all">All</string>
    <string name="streaming">Streaming</string>
    <string name="gaming">Gaming</string>
    <string name="check_location">Check location</string>
    <string name="ip_address">IP Address</string>
    <string name="time_zone">Time Zone</string>
    <string name="asia_karachi">Asia/Karachi</string>
    <string name="faisalabad_pk">Faisalabad,PK</string>
    <string name="go_vpn">GO VPN</string>
    <string name="_60_minutes">+ 60 Minutes</string>
    <string name="extra_time">+ Extra Time</string>
    <string name="upload_rate">Upload Rate</string>
    <string name="download_rate">Download Rate</string>
    <string name="disonnect">Disconnect</string>
    <string name="canada">Canada</string>
    <string name="duration">Duration</string>
    <string name="strength">Strength</string>
    <string name="high">High</string>
    <string name="please_share_your_thoughts">Please share Your thoughts</string>
    <string name="suggestions_below">suggestions below</string>
    <string name="what_is_your_feedback_about">What is your feedback about?</string>
    <string name="app_crashs">App crashs</string>
    <string name="location_missing">Location missing</string>
    <string name="too_much_ads">Too much Ads</string>
    <string name="new_protocols">New protocols</string>
    <string name="connectivity_issue">Connectivity issue</string>
    <string name="others">others</string>
    <string name="in_app_purchase_issue">In-app purchase issue</string>
    <string name="germany">Germany</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="unlimited_access_to_all">Unlimited access to all</string>
    <string name="upgrade_to_pro">Upgrade to PRO!</string>
    <string name="remove_ads_unlock_all_location">Remove Ads unlock all location</string>
    <string name="apps_settings">App Settings</string>
    <string name="subscription_settings">Subscription Settings</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="speed_test">Speed test</string>
    <string name="current_location">Current location</string>
    <string name="split_tunneling">Split Tunneling</string>
    <string name="general_settings">General settings</string>
    <string name="select_language">Select language</string>
    <string name="share_with_friends">Share With friends</string>
    <string name="rate_us">Rate us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="test_internet_speed">Test internet speed</string>
    <string name="start_speed_test">Start Speed test</string>
    <string name="enjoy_03_days_free_trial">Enjoy 03 Days free trial</string>
    <string name="_1_year">1 year</string>
    <string name="first_03_days_free">First 03 days free</string>
    <string name="_1_month">1 Month</string>
    <string name="start_free_trial">Start free trial</string>
    <string name="united_states">United States</string>
    <string name="france">France</string>
    <string name="united_kindom">United Kindom</string>
    <string name="switzerland">Switzerland</string>
    <string name="netherlands">Netherlands</string>
    <string name="australia">Australia</string>
    <string name="sweden">Sweden</string>
    <string name="norway">Norway</string>
    <string name="japan">Japan</string>
    <string name="singapore">Singapore</string>
</resources>